search overlay z-index fix

--- a/src/assets/css/_main.scss
+++ b/src/assets/css/_main.scss
@@ -96,7 +96,7 @@ body {
     width: 100%;
     background-color: $main-bg;
     position: relative;
-    z-index: 10;
+    z-index: 10000;
     .navbar-brand {
         width: 120px;
         padding: 0px;
