--- a/src/assets/css/_mixins.scss
+++ b/src/assets/css/_mixins.scss
@@ -56,7 +56,7 @@
 	//18pt
 }
 @mixin body-font-2(){
-	@include font-setting('Messina Sans Regular', 1em ,400 ,none , 125%, $text-color-2 );
+	@include font-setting('Messina Sans Regular', 0.9em ,400 ,none , 130%, $text-color-2 );
 	//16pt
 }
 
